# cockpit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/cockpit/: cockpit.h  command_monitor.h  terminal.h  updater.h
include/cockpit_tool/: auxiliary.h  terminal.h
source/: auxiliary.cpp  auxiliary.py  cockpit.cpp  cockpit_tool.cpp  cockpit_tool_aux.py  command_monitor.cpp  exec.py  terminal.c  terminal.cpp  updater.cpp
